--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,7 +1,1 @@
-<%= button_to "Discover Top 40 Movies", movies_path, method: :get %>
-
-<%= form_tag(movies_path, method: :get) do %>
-  <%= label_tag(:query, 'Search for:') %>
-  <%= text_field_tag(:query, nil, placeholder: 'Movie Title') %>
-  <%= submit_tag 'Search' %>
-<% end %>
+<%= render partial:'shared/search' %>
