--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,7 +8,7 @@
     </tr>
     <% @movies.each do |movie| %>
     <tr class='movie-row' id=<%="movie-#{movie.id}"%>>
-      <td><%= link_to movie.title, "movies/#{movie.id}" %></td>
+      <td><%= link_to movie.title, movie_path(movie.id) %></td>
       <td><%= movie.vote_average %></td>
     </tr>
     <% end %>
