Complete Issue 12 New Viewing Party Create Party controller Create Party helper class to keep our party controller skinny Create Invitation model for users to be invited to parties Create Party model Add relationship between parties/invitations and users Add create party button to movie show page Create new form to create a party Create migrations for party, invitations and user Create specs to test new features and models

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,12 @@
-<%= button_to "Create Viewing Party", new_party_path, method: :get %>
+<%= button_to "Create Viewing Party", new_party_path, method: :get, params: {movie_id: @movie.id, movie_title: @movie.title, movie_runtime: @movie.runtime} %>
 
-<p>Title: <%= @movie.title %></p>
-<p>Vote Average: <%= @movie.vote_average %></p>
-<p>Runtime: <%= @movie.formatted_runtime %></p>
-<p>Genres: <%= @movie.genres %></p>
-<p><%= @movie.overview %></p>
+<div id="movie-info">
+  <p>Title: <%= @movie.title %></p>
+  <p>Vote Average: <%= @movie.vote_average %></p>
+  <p>Runtime: <%= @movie.formatted_runtime %></p>
+  <p>Genres: <%= @movie.genres %></p>
+  <p><%= @movie.overview %></p>
+</div>
 
 <ul id="actors">
   <% @movie.cast.each do |actor| %>
