--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,58 +1,87 @@
-<%= button_to 'Discover Movies!', discover_index_path, method: :get %>
+<div id="top-page" class="row">
+  <div class="col-1 float-left">
+    <%= button_to 'Discover Movies!', discover_index_path, method: :get, class: 'btn btn-primary' %>
+  </div>
 
-<div id="friends">
-  <div id="friends-search">
+  <div class="col-7 float-left">
+    <%= button_to 'Top Rated Movies!', movies_path, method: :get, class: 'btn btn-secondary' %>
+  </div>
+
+  <div id="friends-search" class="col-4">
     <%= render partial: 'friend_request', locals: {path: friendships_path, button_text: 'Add Friends'} %>
   </div>
+</div>
 
-  <div id="friend-list">
+<div class="row">
+  <div id="party" class="col-8">
+    <div id="host">
+      <h1 class="text-left">Host parties: </h1>
+        <% if @current_user.parties.any? %>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Movie</th>
+              <th>Date</th>
+              <th>Time</th>
+            </tr>
+          </thead>
+        <% @current_user.parties.each do |party|  %>
+        <div id="party-<%=party.id%>">
+          <tbody>
+            <tr>
+              <td><%= party.movie_title %></td>
+              <td><%= party.date.strftime("%d %B %Y") %></td>
+              <td><%= party.date.strftime("%I:%M %p") %></td>
+            </tr>
+          </tbody>
+        </div>
+    </table>
+      <% end %>
+      <% else %>
+      <p>Not hosting any parties</p>
+      <% end %>
+    </div>
+
+
+    <div id="invited">
+      <h1 class="text-left">Invited parties:</h1>
+        <% if @current_user.invitations.any? %>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Movie</th>
+                <th>Date</th>
+                <th>Time</th>
+              </tr>
+            </thead>
+          <% @current_user.invitations.each do |invite|  %>
+          <div id="invite-<%=invite.id%>">
+            <tbody>
+              <tr>
+                <td><%= invite.movie_title %></td>
+                <td><%= invite.date.strftime("%d %B %Y") %></td>
+                <td><%= invite.date.strftime("%I:%M %p") %></td>
+              </tr>
+            </tbody>
+          </div>
+      </table>
+      <% end %>
+      <% else %>
+      <p>Not invited to any parties</p>
+      <% end %>
+    </div>
+  </div>
+
+  <div id="friend-list" class="col-4">
     <% if @current_user.friends.empty? %>
-      <p>You currently have no friends</p>
+    <p>You currently have no friends</p>
     <% else %>
-      <ul>
-        <% @current_user.friends.each do |friend| %>
-        <li><%= friend.username %></li>
-        <% end %>
-      </ul>
+    <ul class="list-group">
+      <li class="list-group-item">Friends: </li>
+      <% @current_user.friends.each do |friend| %>
+      <li class="list-group-item"><%= friend.username %></li>
+      <% end %>
+    </ul>
     <% end %>
   </div>
-</div>
-
-<div id="host">
-  <h1>Host parties: </h1>
-  <% if @current_user.parties.any? %>
-      <th>Movie</th>
-      <th>Date</th>
-      <th>Time</th>
-
-      <% @current_user.parties.each do |party|  %>
-      <div id="party-<%=party.id%>">
-        <tr><%= party.movie_title %></tr>
-        <tr><%= party.date.strftime("%d %B %Y") %></tr>
-        <tr><%= party.date.strftime("%I:%M %p") %></tr>
-      </div>
-      <% end %>
-  <% else %>
-    <p>Not hosting any parties</p>
-  <% end %>
-</div>
-
-
-<div id="invited">
-  <h1>Invited parties:</h1>
-  <% if @current_user.invitations.any? %>
-      <th>Movie</th>
-      <th>Date</th>
-      <th>Time</th>
-
-      <% @current_user.invitations.each do |invite|  %>
-      <div id="invite-<%=invite.id%>">
-        <tr><%= invite.movie_title %></tr>
-        <tr><%= invite.date.strftime("%d %B %Y") %></tr>
-        <tr><%= invite.date.strftime("%I:%M %p") %></tr>
-      </div>
-      <% end %>
-  <% else %>
-    <p>Not invited to any parties</p>
-  <% end %>
 </div>
