--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,19 @@
 <div id="top-page" class="row">
-  <div class="col-1 float-left">
+  <div class="col-bg-1 col-md-2 float-left">
     <%= button_to 'Discover Movies!', discover_index_path, method: :get, class: 'btn btn-primary' %>
   </div>
 
-  <div class="col-7 float-left">
+  <div class="col-bg-7 col-md-5 float-left">
     <%= button_to 'Top Rated Movies!', movies_path, method: :get, class: 'btn btn-secondary' %>
   </div>
 
-  <div id="friends-search" class="col-4">
+  <div id="friends-search" class="col-bg-4 col-md-5">
     <%= render partial: 'friend_request', locals: {path: friendships_path, button_text: 'Add Friends'} %>
   </div>
 </div>
 
 <div class="row">
-  <div id="party" class="col-8">
+  <div id="party" class="col-bg-8 col-md-7">
     <div id="host">
       <h1 class="text-left">Host parties: </h1>
         <% if @current_user.parties.any? %>
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <div id="friend-list" class="col-4">
+  <div id="friend-list" class="col-bg-4 col-md-5">
     <% if @current_user.friends.empty? %>
     <p>You currently have no friends</p>
     <% else %>
